--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,16 @@
   height: 540px;
 }
 
+/* second sec */
+.second-sec-content p {
+  text-align: left;
+  font-family: "Poppins";
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 34px;
+  color: #565656;
+  padding: 25px 100px;
+}
 /* ---------------> */
 /* ------------------------------------------------------ >>>>>>>>>>>>>>>>>>>>>>>>*/
 /* ---------------------------  Mobile VIEW   ------------------------------------*/
@@ -49,6 +59,12 @@
   .GRE-Head img {
     width: 110px;
     height: 30px;
+  }
+  /* second sec mobile view */
+  .second-sec-content p {
+    font-size: 14px;
+    line-height: 22px;
+    padding: 10px 15px;
   }
 }
 /* ----------------------------------------------------->>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> */
@@ -70,5 +86,11 @@
   .GRE-Head img {
     width: 110px;
     height: 30px;
+  }
+  /* second sec Tab view */
+  .second-sec-content p {
+    font-size: 20px;
+    line-height: 28px;
+    padding: 15px 35px;
   }
 }
