--- a/src/App.css
+++ b/src/App.css
@@ -95,7 +95,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  column-gap: 85px;
+  column-gap: 70px;
   margin-top: 10px;
   margin-bottom: 3%;
 }
@@ -103,7 +103,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  column-gap: 75px;
+  column-gap: 40px;
   margin-top: 10px;
   margin-bottom: 3%;
 }
@@ -224,6 +224,442 @@
   margin-left: 25px;
 }
 
+/* 6th Sec */
+.sixthh-sec-cols {
+  display: flex;
+  justify-content: space-between;
+  padding: 2% 3%;
+}
+.sixthh-sec-col2 h3 {
+  font-family: "Poppins";
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 94px;
+  color: #565656;
+}
+.sixthh-sec-col2 p {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 36px;
+  color: #8a8a8a;
+}
+.sixthh-sec-line {
+  border: 1px solid #dfdfdf;
+  margin-top: -45px;
+  margin-bottom: 45px;
+}
+.sixthh-sec-line-center {
+  display: none;
+}
+/* 7th Sec */
+.seventh-sec {
+  padding: 0% 4%;
+}
+.seventh-sec-cols {
+  display: flex;
+  justify-content: center;
+}
+.seventh-sec-cols {
+  padding: 2% 0%;
+}
+.seventh-sec-head h2 {
+  font-family: "Poppins";
+  font-weight: 700;
+  font-size: 44px;
+  line-height: 72px;
+  color: #333399;
+}
+.seventh-sec-col1 p {
+  font-family: "Poppins";
+  font-weight: 400;
+  font-size: 21px;
+  line-height: 32px;
+  color: #8a8a8a;
+}
+.seventh-sec-col1 ol li {
+  font-family: "Poppins";
+  font-weight: 400;
+  font-size: 19px;
+  line-height: 5px;
+  color: #8a8a8a;
+  margin-top: 4%;
+  margin-left: 25px;
+}
+/* 8th Sec */
+.eighth-sec {
+  background-color: #f2f2ff;
+  padding: 0% 5%;
+  margin-top: 4%;
+}
+.eighth-sec-img-col {
+  align-content: center;
+  border: 1px solid #565656;
+  margin-top: 3%;
+}
+.eighth-sec-img-col img {
+  width: 96%;
+  margin: 2%;
+}
+.eighth-sec-cont p {
+  font-family: "Poppins";
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 36px;
+  color: #565656;
+  margin: 2% 5%;
+}
+.eighth-sec-cont {
+  padding-bottom: 0.5%;
+}
+
+/* ninth Sec */
+.fourth-sec-col2 {
+  width: 180%;
+}
+
+/* 10th Sec */
+.tenth-secs {
+  background-color: #f2f2ff;
+}
+.tenth-secs-col2 {
+  background-color: #ffffff;
+}
+.tenth-sec-cont p {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 36px;
+  color: #565656;
+  padding: 2% 8%;
+  padding-bottom: 3%;
+}
+
+/* 11th Sec */
+.eleventh-sec-cols {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 2% 4%;
+}
+.eleventh-sec-col1 h2 {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 64px;
+  line-height: 96px;
+  color: #565656;
+}
+.eleventh-sec-cont-col p {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 36px;
+  color: #565656;
+  margin-top: 17%;
+}
+.eleventh-sec-cont-col {
+  margin-left: -8%;
+}
+.eleventh-sec-cont-col p:first-child {
+  margin-top: 0%;
+}
+/* eleventh sec next */
+.eleventh-sec-next-col {
+  padding: 0% 4%;
+  padding-right: 5%;
+  padding-bottom: 2.5%;
+}
+.eleventh-sec-next-col h3 {
+  font-family: "Poppins";
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 54px;
+  color: #333399;
+  margin-top: 2%;
+}
+.eleventh-sec-next-col p {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 36px;
+  color: #565656;
+}
+.eleventh-sec-next-col h3:first-child {
+  margin-top: 0%;
+}
+/* eleventh box col */
+.eleventh-box-head p {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 36px;
+  color: #565656;
+  padding: 0% 4%;
+}
+.eleventh-box-cols {
+  display: flex;
+  padding: 2% 2%;
+  margin-bottom: 2%;
+}
+.eleventh-sec-col img {
+  width: 20%;
+  display: block;
+  margin: auto;
+}
+.eleventh-sec-col {
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.25);
+  padding: 2% 1%;
+  width: 50%;
+  margin: 0% 1%;
+}
+.eleventh-sec-col ul {
+  list-style-image: url("Assets/eleventh-sec-triangle-img.png");
+}
+.eleventh-sec-col h4 {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 48px;
+  text-align: center;
+  color: #333399;
+  margin-top: 2%;
+}
+.eleventh-sec-col ul {
+  padding-left: 6%;
+  padding-top: 2%;
+}
+.eleventh-sec-col ul li {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 30px;
+  color: #565656;
+  padding: 1% 0%;
+  margin-top: 2%;
+  padding-left: 10px;
+}
+
+/* 12th Sec */
+.twelveth-sec-mobile-view {
+  display: none;
+  justify-content: center;
+  margin: 4% 1%;
+}
+.twelveth-sec-cols-head {
+  display: flex;
+  justify-content: space-around;
+  padding: 0% 7%;
+  margin-bottom: 2%;
+}
+.twelveth-sec-cols-head p {
+  font-family: "Poppins";
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 36px;
+  color: #333399;
+  margin-right: 50px;
+  margin-top: 3%;
+}
+.twelveth-sec-cols-width {
+  width: 34%;
+  z-index: 1;
+}
+.twelveth-col-right-align {
+  text-align: -webkit-right;
+}
+.twelveth-sec-col2-width {
+  z-index: 1;
+}
+.twelveth-sec-cols {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 0.5%;
+}
+.twelveth-sec-col-1,
+.twelveth-sec-col-2,
+.twelveth-sec-col-3 {
+  border: 1px solid #565656;
+  background-color: #ffffff;
+  z-index: 1;
+}
+.twelveth-sec-col-1,
+.twelveth-sec-col-3 {
+  padding: 1.5% 3%;
+  width: fit-content;
+}
+.twelveth-sec-col-2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.twelveth-sec-col-1 p {
+  font-family: "Poppins";
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 36px;
+  color: #565656;
+  width: fit-content;
+}
+.twelveth-sec-col-2 p {
+  font-family: "Poppins";
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 36px;
+  color: #565656;
+  background-color: #ffbaba;
+  width: fit-content;
+  padding: 5px 30px;
+  margin: 2px 3px;
+}
+
+.twelveth-sec-col-2-pad p {
+  padding: 5px 10px;
+}
+.twelveth-sec-col-3 p {
+  font-family: "Poppins";
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 36px;
+  color: #565656;
+  width: fit-content;
+}
+.twelveth-sec-line-align {
+  display: flex;
+  justify-content: center;
+}
+.twelveth-sec-col-line {
+  border: 1px solid #969292;
+  margin-top: -25px;
+  margin-bottom: 4%;
+  width: 50%;
+  align-self: center;
+}
+
+/* 13th Sec */
+.thirteen-sec {
+  margin-top: 3%;
+  margin-bottom: 2%;
+}
+.thirteen-sec-head {
+  display: flex;
+  justify-content: center;
+  margin-top: -30px;
+}
+.thirteen-sec-head p {
+  font-family: "Poppins";
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 36px;
+  width: fit-content;
+  text-align: center;
+  color: #565656;
+  border: 1px solid #565656;
+  padding: 10px 20px;
+  background-color: #ffffff;
+}
+.thirteen-sec-bullet {
+  padding: 2% 0%;
+  padding-left: 15%;
+}
+.thirteen-sec-bullet ul li {
+  font-family: "Poppins";
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 36px;
+  color: #565656;
+}
+/* 13th Sec cols */
+.thirteen-sec-cols {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1% 2%;
+  margin-left: 5%;
+}
+.thirteen-sec-col-head {
+  width: 65%;
+}
+.thirteen-sec-col-head h2 {
+  font-family: "Poppins";
+  font-weight: 600;
+  font-size: 50px;
+  line-height: 80px;
+  color: #565656;
+}
+.thirteen-sec-cont-col p {
+  font-family: "Poppins";
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 36px;
+  color: #565656;
+  margin-top: 7%;
+  margin-left: 4%;
+}
+.thirteen-sec-cont-col p:first-child {
+  margin-top: 0%;
+}
+.thirteen-sec-line-img img {
+  height: 500px;
+}
+
+/* last Sec */
+.last-sec-form form {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 3% 2%;
+}
+.last-sec-form input {
+  border: 2px solid #3e3c3c;
+  width: 25%;
+  height: 30px;
+  padding: 5px;
+  padding-left: 10px;
+  font-size: 20px;
+}
+.form-btn {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 2.5%;
+}
+.form-btn button {
+  font-family: "Poppins";
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 36px;
+  text-align: center;
+  color: #ffffff;
+  background-color: #4d6fe7;
+  cursor: pointer;
+  padding: 8px 20px;
+  border: 4px solid #ffffff;
+  border-radius: 10px;
+  box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.2);
+}
+
+/* footer */
+.footer {
+  display: flex;
+  justify-content: center;
+  padding: 2%;
+  background-color: #4d6fe7;
+}
+.footer p {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 36px;
+  color: #ffffff;
+}
+
 /* ---------------> */
 /* ------------------------------------------------------ >>>>>>>>>>>>>>>>>>>>>>>>*/
 /* ---------------------------  Mobile VIEW   ------------------------------------*/
@@ -297,6 +733,7 @@
     margin-top: 4px;
     width: 20px;
   }
+
   /* Forth Sec Mob view */
   .fourth-sec-col1 img {
     margin-top: 5px;
@@ -355,36 +792,302 @@
     margin-left: 25px;
     margin-top: 6px;
   }
-  /* 6th Sec */
-  .sixthh-sec-cols {
-    display: flex;
-    justify-content: space-between;
-    padding: 2% 3%;
-  }
-  .sixthh-sec-col2 h3 {
-    font-family: "Poppins";
-    font-weight: 500;
-    font-size: 34px;
-    line-height: 94px;
-    color: #565656;
-  }
-  .sixthh-sec-col2 p {
-    font-family: "Poppins";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 36px;
-    color: #8a8a8a;
-  }
+  /* Sixth Sec mob view */
   .sixthh-sec-line {
-    border: 1px solid #dfdfdf;
-    margin-top: -45px;
-    margin-bottom: 45px;
-  }
-  .sixthh-sec-line-center {
     display: none;
   }
+  .sixthh-sec-img-col {
+    display: flex;
+    justify-content: end;
+  }
+  .sixthh-sec-img-col img {
+    width: 50%;
+    padding-right: 3%;
+  }
+  .sixthh-sec-cols {
+    display: block;
+    justify-content: space-between;
+    padding: 2% 0%;
+  }
+  .sixthh-sec-col2 {
+    margin-top: -45px;
+    padding: 0% 3%;
+  }
+  .sixthh-sec-col2 h3 {
+    font-size: 14px;
+    line-height: 54px;
+  }
+  .sixthh-sec-col2 p {
+    font-size: 13px;
+    line-height: 20px;
+    color: #8a8a8a;
+  }
+  .sixthh-sec-line-center {
+    display: block;
+    border: 1px solid #dfdfdf;
+    margin-top: -8px;
+  }
+
+  /* 7th Sec mob view*/
+  .seventh-sec {
+    padding: 0% 4%;
+  }
+  .seventh-sec-cols {
+    flex-direction: column-reverse !important;
+    justify-content: center;
+  }
+  .seventh-sec-cols {
+    padding: 2% 3.5%;
+  }
+  .seventh-sec-head h2 {
+    font-size: 14px;
+    line-height: 32px;
+  }
+  .seventh-sec-col1 p {
+    font-size: 12px;
+    line-height: 18px;
+    margin-top: 2%;
+  }
+  .seventh-sec-col1 ol li {
+    font-size: 12px;
+    line-height: 6px;
+    margin-top: 4%;
+    margin-left: 15px;
+  }
+  .seventh-sec-col2-img {
+    display: flex;
+    justify-content: center;
+  }
+  .seventh-sec-col2-img img {
+    width: 70%;
+  }
+  /* 8th Sec */
+  .eighth-sec {
+    background-color: #f2f2ff;
+    padding: 0% 5%;
+    margin-top: 4%;
+  }
+  .eighth-sec-img-col {
+    align-content: center;
+    border: 1px solid #565656;
+    margin-top: 3%;
+  }
+  .eighth-sec-img-col img {
+    width: 96%;
+    margin: 2%;
+  }
+  .eighth-sec-cont p {
+    font-size: 12px;
+    line-height: 18px;
+    margin: 2% 1%;
+  }
+  .eighth-sec-cont {
+    padding-bottom: 0.5%;
+  }
+  /* ninth Sec mobile view */
+  .fourth-sec-col2 {
+    width: 100%;
+  }
+  /* 10th Sec */
+  .tenth-sec {
+    margin-top: 6%;
+  }
+  .tenth-sec-cont p {
+    font-size: 12px;
+    line-height: 18px;
+    padding: 4% 6%;
+    padding-bottom: 6%;
+  }
+  /* 11th Sec */
+  .eleventh-sec-cols {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 3% 2%;
+  }
+  .eleventh-sec-line-img img {
+    height: 170px;
+  }
+  .eleventh-sec-col1 h2 {
+    font-size: 18px;
+    line-height: 27px;
+  }
+  .eleventh-sec-cont-col p {
+    font-size: 12px;
+    line-height: 18px;
+    margin-top: 10%;
+  }
+  .eleventh-sec-cont-col {
+    margin-left: -2%;
+  }
+  /* eleventh sec next */
+  .eleventh-sec-next-col {
+    padding: 0% 2%;
+    padding-right: 2%;
+  }
+  .eleventh-sec-next-col h3 {
+    font-size: 14px;
+    line-height: 21px;
+    margin-top: 2%;
+  }
+  .eleventh-sec-next-col p {
+    font-size: 12px;
+    line-height: 18px;
+    margin-top: 2%;
+  }
+
+  /* eleventh box col */
+  .eleventh-box-head p {
+    font-size: 12px;
+    line-height: 18px;
+    padding: 0% 4%;
+    margin: 3% 0%;
+  }
+  .eleventh-box-cols {
+    display: block;
+    padding: 2% 2%;
+    margin: 0% 4%;
+  }
+  .eleventh-sec-col img {
+    width: 20%;
+    display: block;
+    margin: auto;
+  }
+  .eleventh-sec-col {
+    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.25);
+    padding: 2% 4%;
+    width: fit-content;
+    margin: 2% 1%;
+    margin-bottom: 8%;
+  }
+  .eleventh-sec-col h4 {
+    font-size: 14px;
+    line-height: 21px;
+    margin-top: 2%;
+  }
+  .eleventh-sec-col ul {
+    padding-left: 8%;
+    padding-top: 2%;
+  }
+  .eleventh-sec-col ul li {
+    font-size: 12px;
+    line-height: 18px;
+    padding: 1% 0%;
+    margin-top: 2%;
+    padding-left: 10px;
+  }
+
+  /* 12th Sec */
+  .twelveth-sec-mobile-view {
+    display: block;
+    display: flex;
+    justify-content: center;
+    margin: 4% 1%;
+  }
+  .twelveth-sec-Desktop-view {
+    display: none;
+  }
+
+  /* 13th Sec */
+  .thirteen-sec {
+    margin-top: 8%;
+  }
+  .thirteen-sec-head {
+    display: flex;
+    justify-content: center;
+    margin-top: -15px;
+  }
+  .thirteen-sec-head p {
+    font-size: 12px;
+    line-height: 18px;
+    padding: 5px 10px;
+  }
+  .thirteen-sec-bullet {
+    padding: 2% 0%;
+    padding-left: 18%;
+  }
+  .thirteen-sec-bullet ul li {
+    font-family: "Poppins";
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 14px;
+    color: #565656;
+  }
+  /* 13th Sec cols */
+  .thirteen-sec-cols {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1% 2%;
+    margin-left: 5%;
+  }
+  .thirteen-sec-col-head {
+    width: 80%;
+  }
+  .thirteen-sec-col-head h2 {
+    font-size: 16px;
+    line-height: 24px;
+  }
+  .thirteen-sec-cont-col p {
+    font-size: 12px;
+    line-height: 18px;
+    margin-top: 7%;
+    margin-left: 4%;
+  }
+  .thirteen-sec-cont-col p:first-child {
+    margin-top: 0%;
+  }
+  .thirteen-sec-line-img img {
+    height: 300px;
+  }
+
+  /* last Sec */
+  .last-sec-form form {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .last-sec-form input {
+    border: 2px solid #3e3c3c;
+    width: 55%;
+    height: 25px;
+    padding: 5px;
+    padding-left: 10px;
+    font-size: 16px;
+    margin-top: 5%;
+  }
+  .form-btn {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 2.5%;
+    margin-top: 3%;
+  }
+  .form-btn button {
+    font-size: 15px;
+    line-height: 36px;
+    text-align: center;
+    background-color: #4d6fe7;
+    cursor: pointer;
+    padding: 4px 20px;
+    border: 4px solid #ffffff;
+    border-radius: 10px;
+    box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.2);
+    margin-bottom: 2%;
+  }
+
+  /* footer */
+  .footer {
+    display: flex;
+    justify-content: center;
+    padding: 3% 2%;
+    background-color: #4d6fe7;
+  }
+  .footer p {
+    font-size: 16px;
+    line-height: 36px;
+  }
 }
+
 /* ----------------------------------------------------->>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> */
 /* ------------------------------- */
 /* -----------------------------------------  Tab VIEW  -------------------------------------------*/
@@ -468,5 +1171,154 @@
   }
   .sixthh-sec-line-center {
     display: none;
+  }
+
+  /* 7th Sec */
+  .seventh-sec-cols {
+    width: 100%;
+  }
+  .seventh-sec-col1 {
+    width: 100%;
+  }
+  .seventh-sec-head h2 {
+    font-size: 14px;
+    line-height: 32px;
+  }
+  .seventh-sec-col1 p {
+    font-size: 12px;
+    line-height: 18px;
+  }
+  .seventh-sec-col1 ol li {
+    font-size: 12px;
+    line-height: 6px;
+    margin-top: 4%;
+    margin-left: 15px;
+  }
+  .seventh-sec-col2-img {
+    width: 70%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .seventh-sec-col2-img img {
+    width: 100%;
+  }
+
+  /* 8th sec */
+  .eighth-sec-cont p {
+    font-size: 16px;
+    line-height: 24px;
+    margin: 2% 1%;
+  }
+
+  /* 10th sec */
+  .tenth-sec-cont p {
+    font-size: 20px;
+    line-height: 32px;
+    padding: 2% 5%;
+    padding-bottom: 6%;
+  }
+
+  /* 11th Sec tab view */
+  /* 11th Sec */
+  .eleventh-sec-cols {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 2% 4%;
+  }
+  .eleventh-sec-col1 h2 {
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 34px;
+    line-height: 50px;
+    color: #565656;
+  }
+  .eleventh-sec-cont-col p {
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 36px;
+    color: #565656;
+    margin-top: 11%;
+  }
+  .eleventh-sec-line-img img {
+    height: 330px;
+  }
+  .eleventh-sec-cont-col {
+    margin-left: -6%;
+  }
+  .eleventh-sec-cont-col p:first-child {
+    margin-top: 0%;
+  }
+  /* eleventh next sec*/
+  .eleventh-sec-next-col h3 {
+    font-size: 20px;
+    line-height: 30px;
+    margin-top: 2%;
+  }
+  .eleventh-sec-next-col p {
+    font-size: 16px;
+    line-height: 25px;
+  }
+
+  /* eleventh box col */
+  .eleventh-box-head p {
+    font-size: 24px;
+    line-height: 36px;
+    padding: 0% 4%;
+  }
+  .eleventh-box-cols {
+    display: flex;
+    padding: 2% 2%;
+  }
+  .eleventh-sec-col img {
+    width: 30%;
+    display: block;
+    margin: auto;
+  }
+  .eleventh-sec-col {
+    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.25);
+    padding: 2% 1%;
+    width: 50%;
+    margin: 0% 1%;
+  }
+
+  .eleventh-sec-col h4 {
+    font-size: 24px;
+    line-height: 28px;
+    margin-top: 2%;
+  }
+  .eleventh-sec-col ul {
+    padding-left: 10%;
+    padding-top: 2%;
+  }
+  .eleventh-sec-col ul li {
+    font-size: 14px;
+    line-height: 18px;
+    padding: 1% 0%;
+    margin-top: 2%;
+    padding-left: 5px;
+  }
+  /* 12th Sec */
+  .twelveth-sec-Desktop-view {
+    display: none;
+  }
+  .twelveth-sec-mobile-view {
+    display: block;
+    display: flex;
+    justify-content: center;
+    margin: 4% 1%;
+  }
+
+  /* 13th Sec */
+  .thirteen-sec-col-head h2 {
+    font-size: 24px;
+    line-height: 44px;
+  }
+  .thirteen-sec-cont-col p {
+    font-size: 22px;
   }
 }
